--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
 		"lint:fix": "npm run format:fix && npm run eslint:fix && npm run sort-package-json:fix",
 		"sort-package-json": "sort-package-json --check",
 		"sort-package-json:fix": "sort-package-json",
-		"test": "npm run test-unit",
-		"pretest-unit": "npm run compile-ts",
-		"test-unit": "cd client && vscode-test",
-		"test-unit//": "echo todo failing for now, will be adding pure unit tests soon",
-		"test//": "Run unit tests, not grammar tests",
+		"test": "npm run test-e2e",
+		"pretest-e2e": "npm run compile-ts",
+		"test-e2e": "cd client && vscode-test",
+		"test-e2e//": "echo todo failing for now, will be adding pure unit tests soon",
+		"test//": "Run e2e tests (open VS Code), not grammar tests",
 		"validate": "npm run lint && npm run test",
 		"validate:ci": "npm run lint",
 		"validate:ci:fix": "npm run lint:fix",
