--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
 		"ts-loader": "^9.4.0",
 		"typescript": "^5.3.2",
 		"typescript-eslint": "^7.12.0",
+		"vitest": "^2.1.1",
 		"vscode-tmgrammar-test": "^0.1.3",
 		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0"
