Add first unit test

--- a/package.json
+++ b/package.json
@@ -49,14 +49,17 @@
 		"lint:fix": "npm run format:fix && npm run eslint:fix && npm run sort-package-json:fix",
 		"sort-package-json": "sort-package-json --check",
 		"sort-package-json:fix": "sort-package-json",
-		"test": "npm run test-e2e",
-		"pretest-e2e": "npm run compile-ts",
-		"test-e2e": "cd client && vscode-test",
-		"test-e2e//": "echo todo failing for now, will be adding pure unit tests soon",
-		"test//": "Run e2e tests (open VS Code), not grammar tests",
+		"test": "npm run test:e2e",
+		"test//": "echo Run e2e tests (open VS Code), not grammar tests",
+		"test:ci": "npm run test:unit",
+		"pretest:e2e": "npm run compile-ts",
+		"test:e2e": "cd client && vscode-test",
+		"test:e2e//": "echo todo failing for now, will be adding pure unit tests soon",
+		"test:unit": "vitest --run",
 		"validate": "npm run lint && npm run test",
-		"validate:ci": "npm run lint",
-		"validate:ci:fix": "npm run lint:fix",
+		"validate:ci": "npm run lint && npm run test:ci",
+		"validate:ci:fix": "npm run lint:fix && npm run test:ci",
+		"validate:ci:fix//": "echo Fix validation issues first, then run remaining checks until failure",
 		"watch": "tsc -b -w"
 	},
 	"prettier": {
