--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
 		"@types/node": "^20.16.0",
 		"@types/sinon": "^17.0.3",
 		"@types/vscode": "^1.82.0",
+		"@vitest/coverage-v8": "^2.1.1",
 		"@vscode/test-cli": "^0.0.10",
 		"@vscode/test-electron": "^2.4.1",
 		"@vscode/test-web": "^0.0.56",
