Revert "Add Vitest for unit tests (#30)"
This reverts commit 52aa813616d3b69dfb3abf466208730392c81ec6.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,6 @@
 	"recommendations": [
 		"aaron-bond.better-comments",
 		"dbaeumer.vscode-eslint",
-		"esbenp.prettier-vscode",
-		"vitest.explorer"
+		"esbenp.prettier-vscode"
 	]
 }
