--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,8 +6,7 @@
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"strict": true,
-		"outDir": "out",
-		"rootDirs": ["src", "../client/src"]
+		"outDir": "out"
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", ".vscode-test", ".vscode-test-web"]
