--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
 	"description": "VSCode part of a language server",
 	"license": "MIT",
 	"version": "0.0.1",
+	"type": "module",
 	"scripts": {
 		"compile-ts": "tsc"
 	},
