--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,9 @@
 	"name": "vscode-autohotkey2-server",
 	"description": "Autohotkey2 Language Server using vscode-lsp.",
 	"license": "LGPLv3.0",
+	"scripts": {
+		"compile-ts": "tsc"
+	},
 	"engines": {
 		"node": "*"
 	},
