Revert "Greatly cleanup and works towards ESM (#32)"
This reverts commit b10a3ed9d8fff7b659c3d73de35412c60a3740a0.

--- a/.prettierignore
+++ b/.prettierignore
@@ -9,7 +9,7 @@ scripts/*
 server/expr_parser/*
 
 client/src/browserClientMain.ts
-client/src/extension.cts
+client/src/extension.ts
 client/src/test/utils.ts
 server/src/ahkProvider.ts
 server/src/browserServerMain.ts
