--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,11 +2,12 @@
 	"compilerOptions": {
 		"target": "ES2022",
 		"lib": ["ES2022", "WebWorker"],
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
+		"module": "commonjs",
+		"moduleResolution": "node",
 		"sourceMap": true,
 		"strict": true,
-		"outDir": "out"
+		"outDir": "out",
+		"rootDirs": ["src", "../client/src"]
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", ".vscode-test", ".vscode-test-web"]
