Remove dupe rootDirs, use `out` for compile-ts

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -6,8 +6,7 @@
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"strict": true,
-		"outDir": "dist",
-		"rootDirs": ["src", "../server/src"],
+		"outDir": "out",
 		"composite": true
 	},
 	"include": ["src"],
