--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
 		"test:grammar": "vscode-tmgrammar-snap tmgrammar-test/*.ahk",
 		"pretest:unit": "npm run compile-ts",
 		"test:unit": "mocha",
+		"prevalidate": "npm run clean",
 		"validate": "npm run lint && npm run test && echo ✅ All checks passed",
+		"prevalidate:fix": "npm run clean",
 		"validate:fix": "npm run lint:fix && npm run test && echo ✅ All checks passed",
 		"vscode:prepublish": "npm run validate",
 		"watch": "npm run build -- --dev",
