e2e tests are back baby :)

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"prebuild": "npm run clean:dist",
 		"build": "node esbuild.mjs",
 		"build:cli": "npm run build -- --cli",
+		"build:e2e": "npm run build -- --e2e",
 		"check-types": "tsc",
 		"clean": "npm run clean:dist && npm run clean:out && npm run clean:watch",
 		"clean:dist": "del-cli client/dist && del-cli server/dist/*.js(.map)?",
@@ -49,8 +50,8 @@
 		"publish": "vsce publish",
 		"sort-package-json": "sort-package-json --check",
 		"sort-package-json:fix": "sort-package-json",
-		"test": "npm run test:grammar && npm run test:unit",
-		"pretest:e2e": "npm run build -- --e2e",
+		"test": "npm run test:grammar && npm run test:unit && npm run test:e2e",
+		"pretest:e2e": "npm run build:e2e",
 		"test:e2e": "vscode-test",
 		"test:grammar": "vscode-tmgrammar-snap tmgrammar-test/*.ahk",
 		"pretest:unit": "npm run compile-ts",
