--- a/package.json
+++ b/package.json
@@ -967,7 +967,7 @@
 		"@vscode/test-electron": "^2.4.1",
 		"@vscode/vsce": "^3.1.1",
 		"del-cli": "^6.0.0",
-		"esbuild": "^0.24.0",
+		"esbuild": "0.24.0",
 		"eslint": "^9.11.0",
 		"mocha": "^10.7.3",
 		"prettier": "3.3.3",
