Wrap special chars in double quotes

--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
 		"build:e2e": "npm run build -- --e2e",
 		"check-types": "tsc",
 		"clean": "npm run clean:dist && npm run clean:out && npm run clean:watch",
-		"clean:dist": "del-cli client/dist && del-cli server/dist/*.js(.map)?",
+		"clean:dist": "del-cli client/dist \"server/dist/*.js*\"",
 		"clean:out": "del-cli out",
-		"clean:watch": "del-cli client/dist && del-cli server/out && del-cli util/src/*.js*",
+		"clean:watch": "del-cli client/dist server/out \"util/src/*.js*\"",
 		"clean:watch//": "echo If watch is running, files will reappear instantly!",
 		"precompile-ts": "npm run clean:out",
 		"compile-ts": "tsc --noEmit false --outDir out",
@@ -53,7 +53,7 @@
 		"test": "npm run test:grammar && npm run test:unit && npm run test:e2e",
 		"pretest:e2e": "npm run build:e2e",
 		"test:e2e": "vscode-test",
-		"test:grammar": "vscode-tmgrammar-snap tmgrammar-test/*.ahk",
+		"test:grammar": "vscode-tmgrammar-snap \"tmgrammar-test/*.ahk\"",
 		"pretest:unit": "npm run compile-ts",
 		"test:unit": "mocha",
 		"prevalidate": "npm run clean",
