--forbid-only in CI

--- a/package.json
+++ b/package.json
@@ -51,13 +51,16 @@
 		"sort-package-json": "sort-package-json --check",
 		"sort-package-json:fix": "sort-package-json",
 		"test": "npm run test:grammar && npm run test:unit && npm run test:e2e",
+		"test:ci": "npm run test:grammar && npm run test:unit && npm run test:e2e:ci",
 		"pretest:e2e": "npm run build:e2e",
 		"test:e2e": "vscode-test",
+		"test:e2e:ci": "npm run test:e2e -- --forbid-only",
 		"test:grammar": "vscode-tmgrammar-snap \"tmgrammar-test/*.ahk\"",
 		"pretest:unit": "npm run compile-ts",
 		"test:unit": "mocha",
 		"prevalidate": "npm run clean",
 		"validate": "npm run lint && npm run test && echo ✅ All checks passed",
+		"validate:ci": "npm run lint && npm run test:ci && echo ✅ All checks passed",
 		"prevalidate:fix": "npm run clean",
 		"validate:fix": "npm run lint:fix && npm run test && echo ✅ All checks passed",
 		"vscode:prepublish": "npm run validate",
