Align test file names with AHK++
- Unit tests are `.test.ts`
- e2e tests are `.e2e.ts`

--- a/package.json
+++ b/package.json
@@ -919,7 +919,7 @@
 		"useTabs": true
 	},
 	"mocha": {
-		"spec": "out/**/*.spec.js"
+		"spec": "out/**/*.test.js"
 	},
 	"dependencies": {
 		"klona": "^2.0.6",
